# SK-Music

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: deploy.yml  desktop_build.yml
Desktop/: .gitignore  README.md  package.json
Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Desktop/src-tauri/capabilities/: default.json
Desktop/src-tauri/frontend/: index.html
Desktop/src-tauri/icons/: README.md  icon.icns
Desktop/src-tauri/src/: deeplink.rs  main.rs  media.rs  tray.rs  updater.rs
assets/: analytics.html  charts.html  connectivity.html  israeli-artist-tagger.html  manifest.json  playback-block-test.html  ui.html
data/: acapella-fallback.json  synonyms.json
docs/: architecture.md  asset-file-limit.md  backend.md  credentials.md  filters-and-parental-controls.md
engine/: build-static.mjs  categories.mjs  engine-worker.mjs  engine.mjs  fetch-corpus.mjs  index.mjs  make-favicon.mjs  normalize.mjs  search.mjs  store.mjs  synonyms.mjs
redirector/: README.md  index.html  youtube-to-skmusic.user.js
supabase/: chasidish-artist-tag.sql  dashboard-summary.sql  israeli-artist-tag.sql  pin-fail-reset.sql  schema.sql
supabase/email-templates/: confirm-signup.html  magic-link.html  reset-password.html
